# EvolveTerm

./: .gitignore  README.md  infer_invs.sh  next.prompt  program.json  pyproject.toml  rewrite.py  test_schema_simple.py  test_yaml_validation.py  todo.md
config/: embed_config_template.json  intent_config_template.json  llm_config_template.json
data/: TPDB_Certain_Benchmarks_Correct.xlsx  hnsw_meta.json  knowledge_base.json  pointer_types.csv  prebuild_SVC25_c_aug_embeddings.json  prebuild_SVC25_c_embeddings.json
docs/: SMT_Ranking_Synth_Guide.md  SVMRanker_Integration_Guide.md  YAML_Schema_Validation_Guide.md  ex_fibonacci01-2_RAG.md  inv_assume_guide.md  pipeline_analyze_guide.md  rag_module_guide.md  seahorn_module_analyze.md
examples/: sample.c
prompts/: Compare_Prompts.md  invariant_inference.system.txt  invariant_inference.user.txt  loop_extraction.system.txt  loop_extraction.txt  loop_extraction.user.txt  prediction.system.txt  prediction.txt  prediction.user.txt  ranking_inference.system.txt  ranking_inference.user.txt  ranking_inference_direct.system.txt  ranking_inference_template.system.txt  ranking_inference_template_known.system.txt  report.system.txt  report.txt  report.user.txt  summary.system.txt  summary.user.txt  translation.system.txt  translation.txt  translation.user.txt  z3_verification.system.txt  z3_verification.user.txt
scripts/: ET_svmranker_module_outputs_analyze.py  analyze_aeval.py  analyze_invariants_merge.py  analyze_loopy_correctness.py  analyze_loopy_detailed.py  analyze_loopy_results.py  analyze_ranking_tpl_yaml.py  (+13 more)
(+19545 files in other folders)
